environments/poolc/staging/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poolc-staging
  labels:
    app.kubernetes.io/part-of: poolc-staging
