environments/poolc/staging/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poolc-backend
  labels:
    app.kubernetes.io/name: poolc-backend
    app.kubernetes.io/part-of: poolc-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: poolc-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: poolc-backend
        app.kubernetes.io/part-of: poolc-staging
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        poolc.org/node-pool: infra
      containers:
        - name: backend
          image: ghcr.io/poolc-web/poolc-be:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: files
              mountPath: /data/files
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: poolc-staging-files
---
apiVersion: v1
kind: Service
metadata:
  name: poolc-backend
  labels:
    app.kubernetes.io/name: poolc-backend
    app.kubernetes.io/part-of: poolc-staging
spec:
  selector:
    app.kubernetes.io/name: poolc-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
