environments/poolc/staging/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poolc-frontend
  labels:
    app.kubernetes.io/name: poolc-frontend
    app.kubernetes.io/part-of: poolc-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: poolc-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: poolc-frontend
        app.kubernetes.io/part-of: poolc-staging
    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: ghcr.io/poolc-web/poolc-fe:sha-250791dc8db4439d664474c998a8703ad60cd814
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: poolc-frontend
  labels:
    app.kubernetes.io/name: poolc-frontend
    app.kubernetes.io/part-of: poolc-staging
spec:
  selector:
    app.kubernetes.io/name: poolc-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
