environments/poolc/staging/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poolc-staging-api
  labels:
    app.kubernetes.io/part-of: poolc-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.poolc.org
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: poolc-backend
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poolc-staging-web
  labels:
    app.kubernetes.io/part-of: poolc-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.poolc.org
      secretName: poolc-staging-dev-tls
  rules:
    - host: dev.poolc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poolc-frontend
                port:
                  name: http
